--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: sliver_text
 description: "SliverText is a widget that displays a string of text in a sliver without using [SliverToBoxAdapter] and [Text] widgets."
 version: 0.0.1
-homepage:
+homepage: https://github.com/Bomsamdi/sliver_text
 
 environment:
   sdk: '>=3.2.5 <4.0.0'
